--- a/week5/css/styles.css
+++ b/week5/css/styles.css
@@ -1,11 +1,35 @@
-#container{
-    background-color: #d25252;
+#container {
+    background-color: #ba2828;
     max-width: 1024px;
     margin: auto;
 }
 
-.header{
+#header {
     background-color: aqua;
+    background-image: url("../images/backgroundimage.jpg");
+    background-size: cover;
     text-align: center;
-    padding: 20px;
+    padding: 10px;
+}
+
+h1 {
+    margin-top: 1px;
+    color: rgb(255, 128, 0);
+}
+
+.topnav {
+    display: flex;
+    background-color: rgb(23, 146, 184);
+}
+.topnav a {
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+    text-decoration:underline;
 }
