--- a/week5/css/styles.css
+++ b/week5/css/styles.css
@@ -20,12 +20,23 @@ h1 {
 .topnav {
     display: flex;
     background-color: rgb(255, 128, 0);
+    justify-content:left;
+    /*align-items:center;(垂直*少用)
+    flex-wrap: wrap;*/
 }
+
+.try{
+    display: flex;
+    background-color: rgb(255, 128, 0);
+    justify-content:space-between;
+}
+
 .topnav a {
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    /*width: 200px;*/
 }
 
 .topnav a:hover {
