--- a/week5/css/styles.css
+++ b/week5/css/styles.css
@@ -1,5 +1,5 @@
 #container {
-    background-color: #ba2828;
+    background-color: #0073f6;
     max-width: 1024px;
     margin: auto;
 }
@@ -20,15 +20,15 @@ h1 {
 .topnav {
     display: flex;
     background-color: rgb(255, 128, 0);
-    justify-content:left;
+    justify-content: left;
     /*align-items:center;(垂直*少用)
     flex-wrap: wrap;*/
 }
 
-.try{
+.try {
     display: flex;
     background-color: rgb(255, 128, 0);
-    justify-content:space-between;
+    justify-content: space-between;
 }
 
 .topnav a {
@@ -42,5 +42,17 @@ h1 {
 .topnav a:hover {
     background-color: #ddd;
     color: black;
-    text-decoration:underline;
+    text-decoration: underline;
+}
+
+.row {
+    display: flex;
+}
+
+.column {
+    width: 33.33%;
+}
+
+#column1 {
+    width: 25%;
 }
