--- a/week5/css/styles.css
+++ b/week5/css/styles.css
@@ -50,9 +50,10 @@ h1 {
 }
 
 .column {
-    width: 33.33%;
+    background-color: rgb(255, 255, 255,0.3);
+    width: 25%;
 }
 
 #column1 {
-    width: 25%;
+    width: 50%;
 }
