--- a/css/styles.css
+++ b/css/styles.css
@@ -12507,3 +12507,15 @@ header.masthead .h1 {
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
 }
+
+#transition{
+  width: 50px;
+  height: 50px;
+  background-image: url("../image/logo.png");
+  background-size: cover;
+  transition: width 2s;
+}
+
+#transition:hover {
+  width: 100px;
+}
