--- a/week5/homework/css/styleshw3.css
+++ b/week5/homework/css/styleshw3.css
@@ -30,36 +30,72 @@
     background-color: rgba(0, 0, 0, 0.2);
 }
 
-.box{
+.box {
     width: 75%;
     margin: 5px;
     background-color: rgb(255, 255, 255, 0.5);
 }
 
-.menu{
+.menu {
     width: 25%;
     margin: 5px;
     background-color: rgb(255, 255, 255, 0.5);
     text-align: center;
+    padding: 2px;
 }
 
-#footer{
-    margin: 5px;
+#footer {
+    margin: 10px;
     padding: 5px;
     background-color: rgba(0, 0, 0, 0.2);
 }
 
-p{
+p {
     text-align: center;
 }
 
-
-@media screen and (max-width: 600px) {
-    .row {
+@media screen and (max-width: 1024px) {
+    #center {
         flex-direction: column;
     }
 
-    .column {
-        width: 100%;
+    img {
+        max-width: 200px;
+    }
+
+    .center {
+        display: block;
+    }
+
+    #main,
+    #right {
+        width: 90%;
+    }
+
+    .menu{
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    #center {
+        flex-direction: column;
+    }
+
+    img {
+        max-width: 200px;
+    }
+
+    .center {
+        display: block;
+    }
+
+    #main,
+    #right {
+        width: 90%;
+    }
+
+    .menu{
+        width: 80%;
     }
 }
