--- a/week6/homework/css/styles.css
+++ b/week6/homework/css/styles.css
@@ -22,6 +22,10 @@
     grid-area: feat3;
 }
 
+.feat4 {
+    grid-area: feat4;
+}
+
 .sidebar {
     grid-area: sidebar;
 }
@@ -32,6 +36,14 @@
 
 .footer {
     grid-area: footer;
+}
+
+.phoneno {
+    grid-area: phoneno;
+}
+
+.blank {
+    grid-area: blank;
 }
 
 .container-a {
@@ -48,6 +60,27 @@
 }
 
 .container-a>div {
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    padding: 20px 0;
+    font-size: 30px;
+}
+
+.container-b {
+    display: grid;
+    grid-template-areas:
+        'logo logo logo blank phoneno phoneno phoneno phoneno'
+        'menu menu menu menu menu menu menu menu'
+        'slideshow slideshow slideshow slideshow slideshow slideshow slideshow slideshow'
+        'feat1 feat1 feat2 feat2 feat3 feat3 feat4 feat4'
+        'text text text text text sidebar sidebar sidebar'
+        'footer footer footer footer footer footer footer footer';
+    gap: 10px;
+    background-color: #2196F3;
+    padding: 10px;
+}
+
+.container-b>div {
     background-color: rgba(255, 255, 255, 0.8);
     text-align: center;
     padding: 20px 0;
