--- a/week6/homework/css/styles.css
+++ b/week6/homework/css/styles.css
@@ -2,6 +2,10 @@
     grid-area: logo;
 }
 
+.blog {
+    grid-area: blog;
+}
+
 .menu {
     grid-area: menu;
 }
@@ -44,6 +48,10 @@
 
 .blank {
     grid-area: blank;
+}
+
+.blank1 {
+    grid-area: blank1;
 }
 
 .container-a {
@@ -91,23 +99,37 @@
     display: grid;
     grid-template-areas:
         'logo logo blank blank blank phoneno phoneno'
-        'logo logo blank menu menu menu menu'
+        'logo logo blank1 menu menu menu menu'
         'slideshow slideshow slideshow slideshow slideshow slideshow slideshow'
-        'logo logo blank blank blank phoneno phoneno'
-        'logo logo blank blank blank phoneno phoneno'
-        'logo logo blank blank blank phoneno phoneno'
-
-        'menu menu menu menu menu menu menu menu'
-        'slideshow slideshow slideshow slideshow slideshow slideshow slideshow slideshow'
-        'feat1 feat1 feat2 feat2 feat3 feat3 feat4 feat4'
-        'text text text text text sidebar sidebar sidebar'
-        'footer footer footer footer footer footer footer footer';
+        'text text text text text sidebar sidebar'
+        'footer footer footer footer footer footer footer';
     gap: 10px;
     background-color: #2196F3;
     padding: 10px;
 }
 
 .container-c>div {
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    padding: 20px 0;
+    font-size: 30px;
+}
+
+.container-d {
+    display: grid;
+    grid-template-areas:
+        'blog blog blog blog blog blog blog'
+        'logo logo blank blank blank phoneno phoneno'
+        'logo logo blank1 menu menu menu menu'
+        'slideshow slideshow slideshow slideshow sidebar sidebar sidebar'
+        'text text text text sidebar sidebar sidebar'
+        'footer footer footer footer footer footer footer';
+    gap: 10px;
+    background-color: #2196F3;
+    padding: 10px;
+}
+
+.container-d>div {
     background-color: rgba(255, 255, 255, 0.8);
     text-align: center;
     padding: 20px 0;
