--- a/week6/homework/css/styles.css
+++ b/week6/homework/css/styles.css
@@ -139,74 +139,96 @@
 .smedia {
     grid-area: smedia;
 }
+
 .biography {
     grid-area: bio;
 }
+
 .offer {
     grid-area: offer;
 }
+
 .services1 {
     grid-area: services1;
 }
+
 .services2 {
     grid-area: services2;
 }
+
 .services3 {
     grid-area: services3;
 }
+
 .services4 {
     grid-area: services4;
 }
+
 .services5 {
     grid-area: services5;
 }
+
 .services6 {
     grid-area: services6;
 }
+
 .pricing {
     grid-area: pricing;
 }
+
 .goldpackage {
     grid-area: goldpackage;
 }
+
 .platinum {
     grid-area: platinum;
 }
+
 .silverpackage {
     grid-area: silverpackage;
 }
+
 .news {
     grid-area: news;
 }
+
 .links {
     grid-area: links;
 }
+
 .hours {
     grid-area: hours;
 }
+
 .time {
     grid-area: time;
 }
+
 .contact {
     grid-area: contact;
 }
 
+.bottom {
+    grid-area: bottom;
+}
 
 #container {
     display: grid;
     grid-template-areas:
-        'blank logo blank blank blank menu menu menu'
-        'sidebar smedia smedia smedia smedia smedia smedia smedia'
-        'bio bio bio bio bio bio bio bio'
-        'offer offer offer offer offer offer offer offer'
-        'blank services1 services1 services2 services2 services3 services3 blank'
-        'blank services4 services4 services5 services5 services6 services6 blank'
-        'blank1 blank1 blank1 blank1 blank1 blank1 blank1 blank1'
-        'pricing pricing pricing pricing pricing pricing pricing pricing'
-        'blank goldpackage goldpackage platinum platinum silverpackage silverpackage blank'
-        'blank1 blank1 blank1 blank1 blank1 blank1 blank1 blank1'
-        'blank blank news news news blank blank blank'
-        'blank1 logo logo links hours time contact blank1';
+        'logo blank blank menu menu menu'
+        'sidebar smedia smedia smedia smedia smedia'
+
+        'bio bio bio bio bio bio'
+        'offer offer offer offer offer offer'
+
+        'services1 services1 services2 services2 services3 services3'
+        'services4 services4 services5 services5 services6 services6'
+
+        'pricing pricing pricing pricing pricing pricing'
+        'goldpackage goldpackage platinum platinum silverpackage silverpackage'
+
+        'news news news news news news'
+        'bottom bottom links hours time contact';
     gap: 10px;
     background-color: #2196F3;
     padding: 10px;
