--- a/week6/homework/css/styles.css
+++ b/week6/homework/css/styles.css
@@ -230,7 +230,7 @@
         'news news news news news news'
         'bottom bottom links hours time contact';
     gap: 10px;
-    background-color: #2196F3;
+    background-color: #0055ff;
     padding: 10px;
 }
 
@@ -240,3 +240,4 @@
     padding: 20px 0;
     font-size: 30px;
 }
+
