--- a/week6/homework/css/styles - Copy.css
+++ b/week6/homework/css/styles - Copy.css
@@ -248,24 +248,24 @@
     right: 15px;
 }
 
-#pricing{
-    background-color:#b300ff23;
+#pricing {
+    background-color: #b300ff23;
 }
 
-#priceformain{
+#priceformain {
     padding: 0px 100px 50px 100px;
 }
 
-#pricing_p{
-    color:#9600d67a;
+#pricing_p {
+    color: #9600d67a;
 }
 
-.pricing_p{
+.pricing_p {
     padding: 50px 0;
     font-size: 40px;
 }
 
-.pricing_p1{
+.pricing_p1 {
     padding-bottom: 10px;
     color: rgb(123, 123, 123);
 }
@@ -278,7 +278,7 @@
     width: 25%;
 }
 
-.pricing_1 h2{
+.pricing_1 h2 {
     color: blue;
     padding-bottom: 30px;
 }
@@ -301,4 +301,54 @@
     text-decoration: none;
     font-size: 16px;
     border-radius: 25px;
+}
+
+#news {
+    color: blue;
+}
+
+#doyou {
+    font-size: 30px;
+}
+
+#myEmail {
+    width: 30%;
+    background-color: rgba(171, 171, 171, 0.251);
+    height: 30px;
+    border-radius: 5%;
+}
+
+#footer {
+    display: flex;
+    background-image: url('../../images/Bg\ Shape\ footer\ 1@2x.png'), url('../../images/Bg\ Shape\ footer\ 2@2x.png'),url('../../images/Bg\ Shape\ footer\ 2@2x.png');
+    background-size: 900px 1280px , 1100px 1200px,1000px 1200px;
+    background-repeat: no-repeat;
+    background-position: -288px, 150px,700px;
+}
+
+#footer_logo {
+    display: flex;
+}
+
+.footer_logo1 {
+    padding: 10px;
+    width: 25%;
+}
+
+.footer_1{
+    padding-top: 100px;
+    width: 20%;
+    color: white;
+    padding-left: 100px;
+}
+
+.footer_2{
+    padding-top: 100px;
+    width: 20%;
+    color: white;
+    text-align: left;
+}
+
+#footer_stay{
+    font-size: 30px;
 }
