--- a/assignment/css/styles.css
+++ b/assignment/css/styles.css
@@ -1,8 +1,14 @@
+body{
+    background-color: azure;
+}
+
+
+
+
 #menu {
     position: sticky;
     top: 0;
     padding: 5px;
-    background-color: #0059ff;
     justify-content: space-between;
     display: flex;
 }
@@ -52,7 +58,7 @@
 #home {
     justify-content: space-between;
     display: flex;
-    background-color: azure;
+
 }
 
 #home div {
@@ -125,6 +131,19 @@
     width: 450px;
 }
 
+.info {
+    display: flex;
+    justify-content: space-between;
+}
+
+.info div {
+    width: 50%;
+}
+
+.info div img {
+    max-width: 15px;
+}
+
 .button {
     background-color: #03A9F4;
     color: white;
@@ -142,20 +161,123 @@
 
 }
 
-#location{
+#location {
     display: flex;
+    background-image: url("../images/bg_loca.png");
+    background-position: -50px;
+    background-repeat: no-repeat;
 }
 
-#location div{
+.loca {
     width: 50%;
+    padding-top: 10%;
+    padding-left: 5%;
 }
 
-#location div img{
+#location h3 {
+    padding-left: 5%;
+    margin-bottom: 0;
+}
+
+#map {
     max-height: 80%;
     align-items: center;
+    padding-left: 5%;
 }
 
 #location h1 {
     font-size: 300%;
-    padding-left: 5%
+    padding-left: 5%;
+}
+
+.loca_info {
+    display: flex;
+    padding-left: 5%;
+}
+
+.loca_phone {
+    display: flex;
+    align-items: center;
+    padding: 3px;
+}
+
+.loca_phone div {
+    padding: 3px;
+}
+
+#last {
+    border-bottom: 1px black solid;
+
+}
+
+#appointment{
+    background-image: url("../images/Appointment.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
+}
+
+.appointment_logo{
+    display: flex;
+    padding-left: 5%;
+    width: 30%;
+}
+
+.topic{
+    position: absolute;
+    top: 7%;
+    left: 44%;
+    color: #01579B;
+    
+}
+
+#select{
+    padding: 10px;
+    font-size:medium;
+    border-radius: 20px;
+    background-color: #9CDBFF;
+}
+
+
+input{
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    border-color: #03A9F4;;
+    padding: 3px;
+}
+
+.box {
+    display: flex;
+    justify-content: center;
+}
+
+.box2 {
+    padding: 2px;
+}
+
+.button_appointment{
+    padding: 1.25rem 2.25rem;
+    font-size: 0.85rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    border: none;
+    border-radius: 10rem;
+    background-color: #03A9F4;
+    text-decoration: none;
+}
+
+#thank {
+    padding-top: 10%;
+    text-align: center;
+}
+
+#thank img{
+    
+    width: 200px;
+}
+
+
+#appointment a{
+    text-decoration: none;
 }
