--- a/assignment/css/styles.css
+++ b/assignment/css/styles.css
@@ -561,7 +561,7 @@ input {
 
     #Doctor {
         display: block;
-        background-color: #b3e5fc79;
+        background-color: azure;
         background-image: none;
     }
 
