--- a/assignment2/css/styles.css
+++ b/assignment2/css/styles.css
@@ -1,5 +1,68 @@
-body {
+/* Background Colour */
+.bg-color-blue {
+    background-color: #69D2E7;
+}
+
+.bg-color-lightblue {
+    background-color: #A7DBD8;
+}
+
+.bg-color-lightyellow {
+    background-color: #E0E4CC;
+}
+
+.bg-color-deepblue {
+    background-color: #161D26;
+}
+
+.bg-color-lightgrey {
+    background-color: #A39E9E;
+}
+
+.bg-color-darkgrey {
+    background-color: #444242;
+}
+
+.bg-color-pink {
+    background-color: #F49191;
+}
+
+.bg-color-lightpurple {
+    background-color: #D5DEFC;
+}
+
+.bg-color-orange {
+    background-color: #F38630;
+}
+
+.bg-color-green {
+    background-color: #00D285;
+}
+
+
+/* Font Size(desktop) */
+.p-large {
     font-family: 'Inter', sans-serif;
+    font-size: 80px;
+}
+
+.p-regular {
+    font-family: 'Inter', sans-serif;
+    font-size: 50px;
+}
+
+.p-small {
+    font-family: 'Inter', sans-serif;
+    font-size: 24px;
+}
+
+.button-1 {
+    border: solid;
+    width: 250px;
+    border-color: black;
+    border-width: 3px;
+    text-align: center;
+    display: inline-block;
 }
 
 .bugermenu-border {
@@ -14,147 +77,406 @@ body {
     font-size: 24px;
 }
 
-#h1n1_main_page {
-    background-color: #A39E9E;
-
+/*Ebola page 1*/
+body,
+html {
+    margin: auto;
+    max-width: 1920px;
+    height: 100%;
 }
 
-
-#h1n1_main_img {
-    border-radius: 50%;
+.bg-image {
+    background-image: url(../img/ebola\ poster.jpg);
+    width: 100%;
+    height: 100%;
 }
 
-.test_color {
-    background-color: aliceblue;
+.topimage {
+    padding: 140px 0 60px 0;
+    min-height: 30vh;
+    position: relative;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
-.h1n1_main_img_leftbottom {
-    max-width: 60px;
+.topimage:before {
+    content: "";
+    background-color: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    inset: 0;
 }
 
-.H1N1_content_bg_color {
-    background-color: #444242;
+.topimage h2 {
+    font-weight: 500;
+    color: #fff;
 }
 
-
-.H1N1_content_word_red {
-    color: #FF0000;
+.topimage ol {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    padding: 0 0 10px 0;
+    margin: 0;
+    font-weight: 600;
+    color: var(--color-primary);
 }
 
-.H1N1_Virus_Transmission {
-    color: #5B0808;
+.topimage ol a {
+    color: rgba(255, 255, 255, 0.8);
+    transition: 0.3s;
 }
 
+.topimage ol a:hover {
+    text-decoration: underline;
+}
 
-.button-1 {
-    border: solid;
-    color: black;
-    border-color: black;
-    border-width: 3px;
-    text-align: center;
+.topimage ol li+li {
+    padding-left: 10px;
+}
+
+.topimage ol li+li::before {
     display: inline-block;
+    padding-right: 10px;
+    color: #fff;
+    content: "/";
+}
+
+.decoration {
     text-decoration: none;
-    padding: 5px 30px;
-    background-color: orange;
 }
 
-.h1n1_main_page_content_time,
-.h1n1_main_page_content_bird,
-.H1N1_resource {
+.text-lblue {
+    color: #82cbed;
+}
+
+.intro .content h3 {
+    font-weight: 400;
+}
+
+.section-header {
+    text-align: center;
+    padding-bottom: 30px;
+}
+
+.section-header h2 {
+    font-weight: 600;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    position: relative;
+}
+
+.section-header h2:after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 60px;
+    height: 2px;
+    background: #69D2E7;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+}
+
+
+.transmission .image-wrap {
+    position: absolute;
+    top: 150px;
+    right: 0;
+}
+
+.transmission .image-wrap img {
+    width: 100%;
+}
+
+.transmission .details {
+    margin-top: 10px;
+    padding: 30px 0;
+    background-color: #f7f9fc;
+}
+
+.icon-size {
+    width: 50px;
+    height: 50px;
+}
+
+.icon-size2 {
+    width: 100px;
+    height: 100px;
+}
+
+.footer .footer-content {
+    background-color: #161D26;
+    background-size: contain;
+    padding: 60px 0 30px 0;
+}
+
+.footer .footer-content .footer-info {
+    margin-bottom: 30px;
+}
+
+.footer .footer-content .footer-info .logo {
+    line-height: 0;
+    margin-bottom: 25px;
+}
+
+.footer .footer-content .footer-info .logo img {
+    max-height: 40px;
+    margin-right: 6px;
+}
+
+.footer .footer-content .footer-info .logo span {
+
+    letter-spacing: 1px;
+    color: #ffffff;
+
+    margin-top: 3px;
+}
+
+.footer .footer-content .footer-info p {
+
+    margin-bottom: 0;
+
+    color: #ffffff;
+}
+
+.footer .footer-content .social-links a {
+
+    line-height: 0;
+    display: inline-block;
+    width: 32px;
+    height: 32px;
+    color: rgba(255, 255, 255, 0.5);
+    margin-right: 10px;
+    transition: 0.3s;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #ffffff;
+    color: #fff;
+    border-radius: 50px;
 }
 
-.h1n1_main_page_content_time_title {
-    width: 25%;
+.footer .footer-content .social-links a:hover {
+    background-color: #38618e;
 }
 
-.h1n1_main_page_content_time_word,
-.h1n1_main_page_content_bird_word {
-    width: 75%;
+.footer .footer-content h4 {
+
+    color: #ffffff;
+    position: relative;
+    padding-bottom: 12px;
 }
 
-.H1N1_resource_title_box {
-    margin-top: 3%;
-    width: 33%;
-    padding: 1.5rem;
+.footer .footer-content .footer-links {
+    margin-bottom: 30px;
+    text-decoration: none;
 }
 
-.H1N1_resource_title {
-    padding-top: 3rem;
+.footer .footer-content .footer-links ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
-.H1N1_resource_content_box {
+.footer .footer-content .footer-links ul i {
+    margin-right: 2px;
+
+    line-height: 0;
+}
+
+.footer .footer-content .footer-links ul li {
+    padding: 10px 0;
     display: flex;
-    width: 66%;
+    align-items: center;
 }
 
-.H1N1_resource_content {
-    width: 50%;
-    padding-top: 3rem;
+.footer .footer-content .footer-links ul li:first-child {
+    padding-top: 0;
 }
 
-.H1N1_resource_content_img {
-    margin-top: 0%;
-
+.footer .footer-content .footer-links ul a {
+    color: #ffffff;
+    transition: 0.3s;
+    display: inline-block;
+    line-height: 1;
+    text-decoration: none;
 }
 
-@media screen and (max-width: 768px) {
+.footer .footer-content .footer-links ul a:hover {
+    color: #ffffff;
+    text-decoration: underline;
+}
 
-    .h1n1_main_img_leftbottom{
-        max-width: 45px;
+.footer .footer-content .footer-contact p {
+    line-height: 26px;
+    color: #ffffff;
+}
+
+.footer .footer-legal {
+    background-color: #161D26;
+    padding: 30px 0;
+}
+
+.footer .footer-legal .copyright {
+    text-align: center;
+    color: #ffffff;
+}
+
+.footer .footer-legal .credits {
+    padding-top: 4px;
+    text-align: center;
+    font-size: 13px;
+    color: #ffffff;
+}
+
+.deco {
+    text-decoration: none;
+}
+
+@media screen and (max-width: 1300px) {
+
+    .transmission .image-wrap {
+        position: relative;
+        top: 0;
     }
 
-    .h1n1_main_page_content_time,
-    .H1N1_resource {
-        display: block;
-    }
-
-    .h1n1_main_page_content_time_title,
-    .h1n1_main_page_content_time_word,
-    .h1n1_main_page_content_bird_word,
-    .H1N1_resource_title_box,
-    .H1N1_resource_content_box {
+    .transmission .image-wrap img {
+        margin-top: 30px;
         width: 100%;
     }
+}
 
-    .h1n1_main_page_content_bird {
+
+/* End of Ebola page 1*/
+
+@media screen and (max-width: 900px) {
+
+    /* Font Size(tablet) */
+    .p-large {
+        font-size: 45px;
+    }
+
+    .p-regular {
+        font-size: 40px;
+    }
+
+    .footercenter {
+        align-items: center;
         display: flex;
-        flex-wrap: wrap-reverse;
+        flex-direction: column;
+        text-align: center;
     }
 
-    .h1n1_main_page_content_bird_word {
-        margin-right: 0;
+    .footercenter2 {
+        align-items: center;
+        display: flex;
+
+        text-align: center;
+        justify-content: center;
     }
 
-    .H1N1_resource_title_box {
-        margin-top: 0%;
+    .footercenter3 {
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        margin: auto;
     }
 
-    .H1N1_resource_content,
-    .H1N1_resource_title {
-        padding-top: 0;
+    .menucenter {
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        margin: auto;
     }
 
+    .listcenter {
+        text-align: center;
+        float: right;
 
-    H1N1_resource_content_img {
-        margin-top: 10%;
     }
 
+    .textcenter {
+        text-align: center;
+        float: right;
+    }
+
+    .transmission .image-wrap {
+        position: relative;
+        top: 0;
+    }
+
+    .transmission .image-wrap img {
+        margin-top: 30px;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 450px) {
+
+    /* Font Size(mobile) */
+    .p-large {
+        font-size: 35px;
+    }
+
+    .p-regular {
+        font-size: 28px;
+    }
+
+    .p-small {
+        font-size: 20px;
+    }
+
+    .transmission .details {
+        margin-top: 0;
+        padding: 50px 0;
+    }
+
+    .transmission .image-wrap img {
+        width: 100%;
+    }
+
+    .transmission .image-wrap {
+        position: relative;
+        top: 0;
+    }
 }
 
 
-@media screen and (max-width: 576px) {
 
-    .h1n1_main_img_leftbottom{
-        max-width: 20px;
-    }
-    .H1N1_resource_content_box{
-        display: block;
-    }
-    .H1N1_resource_content{
-        width: 100%;
-    }
-    .h1n1_main_page_content_time_title img{
-        max-width: 200px;
-    }
+
+
+
+
+
+
+
+
+
+
+
+
+/*H1N1 page 1*/
+.bg-image-h1n1{
+    background-image: url(../img/H1N1_main.jpg);
+    width: 100%;
+    height: 100%;
+}
+
+.topimage ol {
+    color: rgba(255, 255, 255, 0.8);
+    transition: 0.3s;
+}
+
+
+.color-lightgrey {
+    color: #D5DEFC;
+}
+
+
+.color-deepblue {
+    color: #161D26;
 }
